# tplinkcli

./: .env.example  .gitignore  LICENSE  pyproject.toml  readme.md
src/tplinkcli/: __init__.py  api_catalog.json  cli.py  client.py  config.py  crypto.py  mcp_server.py
tests/: test_client.py  test_crypto.py  test_mcp.py
