[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tplinkcli"
version = "0.1.0"
description = "CLI and MCP tool for TP-Link Archer/AX routers via their encrypted web API"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.20",
    "requests>=2.31",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[project.scripts]
tplink = "tplinkcli.cli:main"
tplink-mcp = "tplinkcli.mcp_server:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/tplinkcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
